--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app/bin/www"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.15.4",
     "irc": "^0.5.2",
     "nconf": "^0.8.4",
-    "node.bittrex.api": "^0.5.1"
+    "node.bittrex.api": "^0.5.1",
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "hbs": "~4.0.1",
+    "less-middleware": "~2.2.0",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2"
   }
 }
