--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.4",
-    "irc": "^0.5.2",
-    "nconf": "^0.8.4",
-    "node.bittrex.api": "^0.5.1",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "express": "^4.15.4",
     "hbs": "~4.0.1",
+    "irc": "^0.5.2",
     "less-middleware": "~2.2.0",
+    "lodash": "^4.17.4",
     "morgan": "~1.8.1",
+    "nconf": "^0.8.4",
+    "node.bittrex.api": "^0.5.1",
     "serve-favicon": "~2.4.2"
   }
 }
